Fix up footer folding on mobiles

--- a/app/stylesheets/footer.scss
+++ b/app/stylesheets/footer.scss
@@ -6,6 +6,11 @@ footer.footer {
 
     color: white;
 
+    .row > div
+    {
+        height: 10em;
+    }
+
     .make-games-badge
     {
         position: relative;
